# esp32-wordclock

./: .cproject  .gitignore  .project  platformio.ini
doc/: Build_Instructions.txt
doc/debugging/: ESP32_FT2232H_OpenOCD_Eclipse.txt
src/: CMakeLists.txt  ClockFace.cpp  ClockFace.hpp  Config.cpp  Config.hpp  ConfigManager.cpp  ConfigManager.h  Networking.cpp  Networking.hpp  Observer.hpp  SerialInit.hpp  Subject.cpp  Subject.hpp  Wordclock.cpp  Wordclock.hpp  display.cpp  display.hpp  main.cpp  main.hpp  sdkconfig  sdkconfig.old  src.ino
src/components/config/: CMakeLists.txt  config.cpp
src/components/esp32-wifi-manager/: CMakeLists.txt  Kconfig  settings_bck.html
src/components/esp32-wifi-manager/src/: code.js  http_app.c  index.html  settings.html  wifi_manager.c  wifi_manager.h
src/data/: settings.html
src/esp32-wordclock/: ConfigManager.cpp  ConfigManager.h  display.cpp  display.hpp  esp32-wordclock.ino
src/esp32-wordclock/data/: index.html  settings.html
src/main/: CMakeLists.txt  display.cpp  list.cpp  main copy.cpp.bck  main.cpp  sntp.cpp
src/sam32-wordclock/: display.cpp  sam32-wordclock.ino
src/sam32-wordclock/data/: settings.html
